# mkissues

./: README.rst  mkissues.py  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/mkissues/: __init__.py  __main__.py  client.py
