[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkissues"
dynamic = ["version"]
description = "Create GitHub issues from text files"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "mkissues@varonathe.org" }
]

keywords = [
    "GitHub",
    "GitHub issues",
]

classifiers = [
    "Private :: Keep Off PyPI",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "ghrepo ~= 0.1",
    "ghtoken ~= 0.1",
    "headerparser ~= 0.5.0",
    "requests ~= 2.20",
]

[project.scripts]
mkissues = "mkissues.__init__:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/mkissues"
"Bug Tracker" = "https://github.com/jwodder/mkissues/issues"

[tool.hatch.version]
path = "src/mkissues/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "setup.cfg",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"
