[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkissues"
dynamic = ["version"]
description = "Create GitHub issues from text files"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "John Thorvald Wodder II", email = "mkissues@varonathe.org" }
]

keywords = [
    "GitHub",
    "GitHub issues",
    "GitHub repository management",
]

classifiers = [
    "Private :: Keep Off PyPI",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "click ~= 8.0",
    "click-loglevel ~= 0.5",
    "ghrepo ~= 0.7",
    "ghreq ~= 0.1",
    "ghtoken ~= 0.1",
    "headerparser ~= 0.5.0",
]

[project.scripts]
mkissues = "mkissues.__main__:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/mkissues"
"Bug Tracker" = "https://github.com/jwodder/mkissues/issues"

[tool.hatch.version]
path = "src/mkissues/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
